--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,6 +6,19 @@
     padding: 1rem;
 }
 
-.content h1 {
+ol.pokemon {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    list-style: none;
+    padding: 0;
     margin: 0;
+}
+
+ol.pokemon li {
+    margin: .5rem;
+    padding: 2rem 1rem;
+    background-color: #14A06F;
+    color: white;
+    border-radius: 1rem;
+    height: 100px;
 }
