add pokemon img

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,5 +1,7 @@
 * {
     font-family: 'Roboto', sans-serif;
+    /* Propriedade para controlar o dimensionamento dos elementos */
+    box-sizing: border-box;
 }
 
 .content {
@@ -7,18 +9,29 @@
 }
 
 ol.pokemon {
+    /* Transforma a lista em forma de coluna */
     display: grid;
+    /* Fraciona a lista para ficar uma do lado da outra */
     grid-template-columns: 1fr 1fr;
+    /* Tira os numeros que ordena a lista */
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
 ol.pokemon li {
+    display: flex;
+    flex-direction: column;
     margin: .5rem;
     padding: 2rem 1rem;
     background-color: #14A06F;
     color: white;
-    border-radius: 1rem;
+    border-radius: 1rem;    
+}
+
+ol.pokemon li img {
+    max-width: 100%;
     height: 100px;
+    /* Alinha este item no final da direção principal */
+    align-self: flex-end;
 }
