--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,7 +8,7 @@
     padding: 1rem;
 }
 
-ol.pokemon {
+.pokemons {
     /* Transforma a lista em forma de coluna */
     display: grid;
     /* Fraciona a lista para ficar uma do lado da outra */
@@ -19,19 +19,53 @@ ol.pokemon {
     margin: 0;
 }
 
-ol.pokemon li {
+.pokemon {
     display: flex;
     flex-direction: column;
     margin: .5rem;
-    padding: 2rem 1rem;
-    background-color: #14A06F;
-    color: white;
+    padding: 1rem 1rem;
+    background-color: #49D0B0;
     border-radius: 1rem;    
 }
 
-ol.pokemon li img {
+.pokemon .details {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.pokemon .details .types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.pokemon .details .types .type {
+    background-color: #61e1ca;
+    color: white;
+    padding: .25rem 1rem;
+    margin: 0.25rem 0;
+    border-radius: 1rem;
+    font-size: small;
+
+}
+
+.pokemon .details img {
     max-width: 100%;
-    height: 100px;
+    height: 70px;
     /* Alinha este item no final da direção principal */
     align-self: flex-end;
+}
+
+.pokemon .number {
+    text-align: right;
+    color: black;
+    opacity: 0.2;
+    font-size: small;
+}
+
+.pokemon .name {
+    color: white;
+    margin-bottom: inherit;
 }
