--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -11,12 +11,85 @@
     border-radius: 1rem;
 }
 
+.normal{ 
+    background-color: #a6a877
+}
+
+.grass{ 
+    background-color: #77c850
+}
+
+.fire{ 
+    background-color: #ee7f30
+}
+
+.water{ 
+    background-color: #678fee
+}
+
+.eletric{ 
+    background-color: #f7cf2e
+}
+
+.ice{ 
+    background-color: #98d5d7
+}
+
+.ground{ 
+    background-color: #dfbf69
+}
+
+.flying{ 
+    background-color: #a98ff0
+}
+
+.poison{ 
+    background-color: #a040a0
+}
+
+.fighting{ 
+    background-color: #bf3029
+}
+
+.psychic{ 
+    background-color: #f65687
+}
+
+.dark{ 
+    background-color: #725847
+}
+
+.rock{ 
+    background-color: #b8a137
+}
+
+.bug{ 
+    background-color: #a8b720
+}
+
+.ghost{ 
+    background-color: #6e5896
+}
+
+.steel{ 
+    background-color: #b9b7cf
+}
+
+.dragon{ 
+    background-color: #6f38f6
+}
+
+.fairy{ 
+    background-color: #f9aec7
+}
+
+
 .pokemon {
     display: flex;
     flex-direction: column;
     margin: .5rem;
     padding: 1rem   ;
-    background-color: #49D0B0;
+    
     border-radius: 1rem;    
 }
 
@@ -34,7 +107,7 @@
 }
 
 .pokemon .details .types .type {
-    background-color: #61e1ca;
+    filter: brightness(1.1);
     color: white;
     padding: .25rem 1rem;
     margin: 0.25rem 0;
@@ -60,6 +133,7 @@
 .pokemon .name {
     color: white;
     margin-bottom: inherit;
+    text-transform: capitalize;
 }
 
 @media screen and (min-width: 380px) {
