--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -136,6 +136,29 @@
     text-transform: capitalize;
 }
 
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    font-size: 130%;
+    padding: 1rem;
+}
+
+.pagination button {
+    padding: .25rem 1rem;
+    margin: 0.25rem 0;
+    background-color: #dfbf69;
+    border: none;
+    border-radius: 1rem;
+    font-size: small;
+    color: white;
+
+    
+    
+}
+
 @media screen and (min-width: 380px) {
     /* o grid na tela vai ter 4 colunas uma do lado da outra */
     .pokemons{
